--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "crypto-browserify": "^3.12.0",
     "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
+    "react-calendar": "^4.6.1",
+    "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.18.0",
     "react-scripts": "^5.0.1",
     "sweetalert2": "^11.6.13",
